tests/invalid/class_attr_unknown_class_registry/main.py
def main() -> None:
    x: int = 1
    y = x.missing
    print(y)
